--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>PortfolioV3</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#1a202c" />
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" as="style"
     onload="this.onload=null;this.rel='stylesheet'" />
   <noscript>
