--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>PortfolioV3</title>
+  <title>Mohd Haroon</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#334155" />
+  <meta name="robots" content="index, follow" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script> -->
