--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#fcfcfc" />
   <meta name="robots" content="index, follow" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script> -->
