--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,30 @@
   <!-- <script> -->
   <!--   eruda.init(); -->
   <!-- </script> -->
+ <script>
+			if (localStorage.theme === 'dark') {
+				if (document && document.documentElement) {
+					document.documentElement.classList.add('dark');
+				}
+			} else if (localStorage.theme === 'light') {
+				if (document && document.documentElement) {
+					document.documentElement.classList.remove('dark');
+					localStorage.setItem('theme', 'light');
+				}
+			} else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+				localStorage.setItem('theme', 'system');
+				if (document && document.documentElement) {
+					document.documentElement.classList.add('dark');
+				}
+			} else {
+				if (document && document.documentElement) {
+					document.documentElement.classList.remove('dark');
+				}
+			}
+		</script>
 </head>
 
-<body class="dark">
+<body>
   <app-root></app-root>
 </body>
 
